[tool.poetry]
name = "audio-ui"
version = "0.1.0"
description = ""
authors = ["csh <458761603@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
gradio = "^5.6.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
